created a contact page and added a navbar that can switch between the home and contact page, also renders on both pages. Using Route.on

--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -1,2 +1,9 @@
+<nav>
+  <ul>
+    <li><a href="/">home</a></li>
+    <li><a href="/contact">contact</a></li>
+  </ul>
+</nav>
+
 <h1>Home</h1>
 <p>Welcome to the AdonisJS 4.0 blog</p>
