--- a/resources/views/contact.edge
+++ b/resources/views/contact.edge
@@ -1,8 +1,15 @@
-<ul>
-  <li><a href="/">home</a></li>
-  <li><a href="/contact">contact</a></li>
-</ul>
-</nav>
+<head>
+  {{ style('style') }}
+</head>
+
+
+  <nav>
+    <ul>
+      <li><a href="/">home</a></li>
+      <li><a href="/contact">contact</a></li>
+    </ul>
+  </nav>
+
 
 <h1>Contact</h1>
 <p>Welcome to my contact page</p>
