--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -1,9 +1,15 @@
-<nav>
-  <ul>
-    <li><a href="/">home</a></li>
-    <li><a href="/contact">contact</a></li>
-  </ul>
-</nav>
+<head>
+  {{ style('style') }}
+</head>
+
+
+  <nav>
+    <ul>
+      <li><a href="/">home</a></li>
+      <li><a href="/contact">contact</a></li>
+    </ul>
+  </nav>
+
 
 <h1>Home</h1>
 <p>Welcome to the AdonisJS 4.0 blog</p>
