--- a/public/style.css
+++ b/public/style.css
@@ -20,10 +20,11 @@ body {
 
 nav {
   color: #fff;
-  width: 1312px;
+  width: 1440px;
 }
 
 nav ul {
+  margin: 0 auto;
   width: 1312px;
   display: flex;
   justify-content: space-around;
