--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -1,5 +1,5 @@
-<head>
-  {{--  {{ style('style') }}  --}}
+{{--  <head>
+  {{ style('style') }} 
 </head>
 
 
@@ -8,7 +8,7 @@
       <li><a href="/">home</a></li>
       <li><a href="/contact">contact</a></li>
     </ul>
-  </nav>
+  </nav>  --}}
 
 
 <h1>Home</h1>
