--- a/resources/views/main.edge
+++ b/resources/views/main.edge
@@ -10,5 +10,7 @@
   
 
 {{ script('https://code.jquery.com/jquery-3.2.1.slim.min.js')}}
+{{ script('https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js')}}
+{{ script('https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js')}}
 </body>
 </html>
