extended the main layout to index.edge. Wrapped the content in @section

--- a/resources/views/main.edge
+++ b/resources/views/main.edge
@@ -7,7 +7,9 @@
   <title>Adonis 4.0 Blog</title>
 </head>
 <body>
-  
+  <div class="container">
+    @!section('content')
+  </div>
 
 {{ script('https://code.jquery.com/jquery-3.2.1.slim.min.js')}}
 {{ script('https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js')}}
