--- a/resources/views/posts/index.edge
+++ b/resources/views/posts/index.edge
@@ -1,6 +1,10 @@
-<h1>{{ title }}</h1>
-<ul>
-@each(post in posts)
-  <li>{{ post.title }}</li>
-@endeach
-</ul>
+@layout('main')
+
+@section('content')
+  <h1>{{ title }}</h1>
+  <ul>
+    @each(post in posts)
+      <li>{{ post.title }}</li>
+    @endeach
+  </ul>
+@endsection
