removed start and end section from the navbar and included it into the main.edge with @include

--- a/resources/views/main.edge
+++ b/resources/views/main.edge
@@ -7,6 +7,7 @@
   <title>Adonis 4.0 Blog</title>
 </head>
 <body>
+  @include('inc/navbar')
   <div class="container">
     @!section('content')
   </div>
