--- a/resources/views/posts/index.edge
+++ b/resources/views/posts/index.edge
@@ -2,9 +2,9 @@
 
 @section('content')
   <h1>{{ title }}</h1>
-  <ul>
+  <ul class="list-group">
     @each(post in posts)
-      <li>{{ post.title }}</li>
+      <li class="list-group-item">{{ post.title }}</li>
     @endeach
   </ul>
 @endsection
